# density

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  clang-format  crash.txt  crash_1.txt  crash_2.txt  history.txt  index.html  overview.odt  thread_sanit.bh  to_do.txt  todo.txt.txt
bench/: CMakeLists.txt  main.cpp
bench/bench_framework/: environment.cpp  environment.h  performance_test.cpp  performance_test.h  test_session.cpp  test_session.h  test_tree.cpp  test_tree.h
bench/tests/: lifo_tests.cpp  muilti_thread_tests.cpp  single_thread_tests.cpp
bench/vs2017/: density_bench.vcxproj  density_bench.vcxproj.filters  results.txt  results_1.txt
density/: any.h  array_any.h  conc_function_queue.h  conc_heter_queue.h  (+43 more)
density_tests/: CMakeLists.txt  allocator_benchmarks.cpp  container_test.h  dense_list_benchmark.cpp  dense_list_test.cpp  func_test_heter_array.cpp  function_queue_benchmarks.cpp  function_queue_test.cpp  heterogeneous_array.cpp  lifo_benchmarks.cpp  lifo_test.cpp  list_benchmarks.cpp  list_test.cpp  main.cpp  old_dense_list_benchmark.cpp  old_dense_list_test.cpp  page_allocator_benchmarks.cpp  paged_queue_test.cpp  pointer_arithmetic_test.cpp  queue_benchmarks.cpp  queue_test.cpp  test_allocators.h
density_tests/benchmarks/: bench_allocator.cpp  bench_function_queue.cpp  bench_lifo.cpp  bench_queues.cpp
density_tests/code_blocks/: default.workspace  default.workspace.layout  density_test.cbp  density_test.depend  density_test.layout
density_tests/code_lite/: Makefile  density_tests.mk  density_tests.project  density_tests.txt  density_tests.workspace
density_tests/examples/: conc_func_queue_examples.cpp  concurrent_heterogeneous_queue_examples.cpp  func_queue_examples.cpp  sp_heterogeneous_queue_examples.cpp
density_tests/functionality_cases/: cases_any.cpp  cases_concurrent_function_queue.cpp  cases_concurrent_heterogeneous_queue.cpp  cases_heterogeneous_array.cpp  cases_lifo.cpp  cases_page_allocator.cpp  cases_queue.cpp  concurrent_producer_consumer_test.h  dynamic_type.h  queue_load_unload_test.h  shadow_container.h  test_allocators.h  test_void_allocator.h
density_tests/old/: function_queue_benchmarks.cpp  heterogeneous_array.cpp  lifo_benchmarks.cpp  list_benchmarks.cpp  paged_queue_test.cpp  pointer_arithmetic_test.cpp  queue_benchmarks.cpp  queue_test.cpp
density_tests/test_framework/: density_test_common.cpp  density_test_common.h  dynamic_type.cpp  dynamic_type.h  easy_random.h  exception_tests.cpp  exception_tests.h  histogram.cpp  histogram.h  line_updater_stream_adapter.cpp  line_updater_stream_adapter.h  progress.cpp  progress.h  queue_generic_tester.h  queue_load_unload_test.h  queue_tester.h  shared_block_registry.cpp  shared_block_registry.h  test_allocators.cpp  test_allocators.h  test_objects.cpp  test_objects.h  thread_affinity.cpp  thread_affinity.h  threading_extensions.cpp  threading_extensions.h
density_tests/tests/: complex_polymorphism.h  concurrent_heterogeneous_queue_basic_tests.cpp  heterogeneous_queue_basic_tests.cpp  lf_heterogeneous_queue_basic_tests.cpp  load_unload_tests.cpp  nonblocking_heterogeneous_queue_basic_tests.cpp  queue_generic_tests.cpp  queue_generic_tests.h  sp_heterogeneous_queue_basic_tests.cpp
density_tests/tests/generic_tests/: conc_heter_queue_generic_tests.cpp  heter_queue_generic_tests.cpp  lf_heter_queue_generic_tests_relaxed.cpp  lf_heter_queue_generic_tests_seqcst.cpp  nb_heter_queue_generic_tests_relaxed.cpp  nb_heter_queue_generic_tests_seqcst.cpp  queue_generic_tests.cpp  queue_generic_tests.h  sp_heter_queue_generic_tests_seqcst.cpp
density_tests/vs2015/: density_test.sln  density_test.vcxproj  density_test.vcxproj.filters  perf.txt  perf_2.txt
density_tests/vs2017/: density_tests.sln  density_tests.vcxproj  density_tests.vcxproj.filters
test/: .travis.yml  CMakeLists.txt  main.cpp  test_settings.cpp  test_settings.h
test/android_studio/app/: CMakeLists.txt  build.gradle
test/android_studio/app/src/main/: AndroidManifest.xml
test/android_studio/app/src/main/cpp/: native-lib.cpp
test/android_studio/app/src/main/res/layout/: activity_main.xml
test/android_studio/app/src/main/res/values/: strings.xml
test/android_studio/gradle/wrapper/: gradle-wrapper.properties
test/code_lite/: Makefile  density_tests.project
test/examples/: any.h  any_tests.cpp  conc_func_queue_examples.cpp  conc_queue_examples.cpp  concurrent_heterogeneous_queue_examples.cpp  dynamic_reference_examples.cpp  func_queue_examples.cpp  heter_queue_examples.cpp  heterogeneous_queue_examples.cpp  lf_func_queue_examples.cpp  lf_heterogeneous_queue_examples.cpp  lifo_examples.cpp  misc_examples.cpp  overview_examples.cpp  runtime_type_examples.cpp  sp_func_queue_examples.cpp  sp_heterogeneous_queue_examples.cpp  sp_queue_examples.cpp
test/test_framework/: aligned_containers.h  allocator_stress_test.cpp  allocator_stress_test.h  cpu_busier.cpp  cpu_busier.h  density_test_common.cpp  density_test_common.h  dynamic_type.cpp  dynamic_type.h  easy_random.h  exception_tests.cpp  exception_tests.h  histogram.cpp  histogram.h  line_updater_stream_adapter.cpp  line_updater_stream_adapter.h  progress.cpp  progress.h  queue_generic_tester.h  queue_load_unload_test.h  shared_block_registry.cpp  shared_block_registry.h  statistics.h  test_allocators.cpp  test_allocators.h  test_objects.cpp  test_objects.h  threading_extensions.cpp  threading_extensions.h
test/tests/: complex_polymorphism.h  concurrent_heterogeneous_queue_basic_tests.cpp  heterogeneous_queue_basic_tests.cpp  lf_heterogeneous_queue_basic_tests.cpp  lifo_tests.cpp  load_unload_tests.cpp  sp_heterogeneous_queue_basic_tests.cpp  type_fetaures_tests.cpp  user_data_stack.cpp
test/tests/generic_tests/: conc_heter_queue_generic_tests.cpp  heter_queue_generic_tests.cpp  lf_heter_queue_generic_tests_relaxed.cpp  lf_heter_queue_generic_tests_seqcst.cpp  queue_generic_tests.cpp  queue_generic_tests.h  sp_heter_queue_generic_tests_seqcst.cpp
test/vs2017/: density_tests.sln  density_tests.vcxproj  density_tests.vcxproj.filters  test.bat
(+502 files in other folders)
